# testgpt

./: .gitignore  API_INTERFACES.md  CATEGORY_DISPLAY_FIX.md  CATEGORY_FIX_SUMMARY.md  CATEGORY_MANAGEMENT_README.md  EXCEL_IMPORT_GUIDE.md  MODEL_SETTINGS_GUIDE.md  MODEL_SETTINGS_IMPLEMENTATION.md  PROJECT_SUMMARY.md  README.md  RECORD_FEATURE.md  REFACTOR_SUMMARY.md  WEBSOCKET_README.md  demo_model_settings.py  package-lock.json  package.json  standard_template_test.xlsx  test_all_features.py  test_api.py  test_browser_use.py  test_database.py  test_execution.py  test_import.csv  test_import.xlsx  test_import_with_category.xlsx  test_mysql_connection.py  test_prompt_settings.py
backend/: CONCURRENT_EXECUTION.md  REFACTOR_SUMMARY.md  demo1.xlsx  migrate_categories.py  pyproject.toml  run.py  start.sh  test_websocket.py
backend/src/autotest/: REFACTOR_README.md  __init__.py  browser_agent.py  browser_event_collector.py  config_manager.py  database.py  demo.py  main.py  migrate_database.py  models.py  test_executor.py  websocket_manager.py
backend/src/autotest/routers/: categories.py  config.py  import_tasks.py  multi_model_config.py  statistics.py  test_cases.py  test_executions.py  websocket.py
backend/src/autotest/services/: async_import_service.py  category_service.py  config_service.py  excel_service.py  excel_template_service.py  (+4 more)
backend/tests/: README.md  browser_example.py  browser_use_demo.py  demo_complete.py  demo_model_settings.py  test_api.py  test_api_with_db.py  test_browser_use_events.py  test_category_batch_execution.py  test_execution.py  test_model_config.py  test_multi_model_config.py  test_setup.py  test_task_cancellation.py
(+46 files in other folders)
