[project]
name = "autotest"
version = "0.1.0"
description = "A simple REST API project using FastAPI"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "browser-use>=0.5.6",
    "fastapi>=0.104.0",
    "playwright>=1.54.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "socksio>=1.0.0",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]>=0.24.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autotest"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
] 
